--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,10 +3,10 @@ name: Cypress Tests
 on:
   push:
     branches:
-      - main  # ajuste conforme sua branch principal
+      - main
   pull_request:
     branches:
-      - main  # ajuste conforme sua branch principal
+      - main
 
 jobs:
   test:
